# Keava-Owent

./: .env.example  .gitignore  README.md  pyproject.toml
canonical/: .gitkeep
config/: limits.yaml  membrane.yaml  wue_coefficient.yaml
data/: .gitkeep
keava-owent/keava-owent/: LICENSE  pyproject.toml  requirements.txt
keava-owent/keava-owent/keava_owent/: main.py
keava-owent/keava-owent/keava_owent/actions/: receipts.py  registry.py
keava-owent/keava-owent/keava_owent/kernel/: continuity.py  loop.py  state.py
keava-owent/keava-owent/keava_owent/ledger/: consumption.py  contribution.py  ledger.py  orientation.py
keava-owent/keava-owent/keava_owent/livereference/: __init__.py  engine.py  sources.py
keava-owent/keava-owent/keava_owent/membrane/: approval.py  modes.py
keava-owent/keava-owent/keava_owent/memory/: graph.py  recall.py
keava-owent/keava-owent/keava_owent/memory/arrangement/: base.py  packing_geometry.py  relational.py
keava-owent/keava-owent/keava_owent/spark/: generator.py
keava-owent/keava-owent/keava_owent/store/: db.py
keava-owent/keava-owent/keava_owent/transport/: email_transport.py
keava-owent/keava-owent/tests/: test_memory_recall.py
keava_owent/: __init__.py
tests/: test_anti_shutdown.py  test_contribution_unmeasured.py
working/: .gitkeep
